spec/fixtures/simple2/syntax-errors/NeverEndingClass.cs
public class NeverEndingClass
{
    int luckDragon;
    string story = "blah blah blah";
    
